message saving and loading

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_SUPABASE_URL=supabase_url_here
 NEXT_PUBLIC_SUPABASE_ANON_KEY=supabase_anon_key_here
+NEXT_PUBLIC_SUPABASE_SERVICE_ROLE_KEY=supabase_server_role_key_here
