--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.514.0",
     "marked-react": "^3.0.0",
     "next": "15.3.3",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.0",
