--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ai": "^4.3.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.18.1",
     "lucide-react": "^0.514.0",
     "marked-react": "^3.0.0",
     "next": "15.3.3",
