--- a/.env.local.example
+++ b/.env.local.example
@@ -2,3 +2,4 @@ NEXT_PUBLIC_SUPABASE_URL=supabase_url_here
 NEXT_PUBLIC_SUPABASE_ANON_KEY=supabase_anon_key_here
 NEXT_PUBLIC_SUPABASE_SERVICE_ROLE_KEY=supabase_server_role_key_here
 OPENROUTER_API_KEY=openrouter_key_here
+UPLOADTHING_TOKEN=uploadthing_token_here
