--- a/.env.local.example
+++ b/.env.local.example
@@ -3,3 +3,4 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=supabase_anon_key_here
 NEXT_PUBLIC_SUPABASE_SERVICE_ROLE_KEY=supabase_server_role_key_here
 OPENROUTER_API_KEY=openrouter_key_here
 UPLOADTHING_TOKEN=uploadthing_token_here
+NEXT_PUBLIC_SITE_URL=https://yourdomain.com
